samples/_failures_safe/1761391599_a8119a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cab402b1.c: In function ‘main’:
./samples/SAFE/__tmp_cab402b1.c:121:25: error: expected ‘;’ at end of input
  121 |     generate_sample_logs
      |                         ^
      |                         ;
./samples/SAFE/__tmp_cab402b1.c:121:5: error: expected declaration or statement at end of input
  121 |     generate_sample_logs
      |     ^~~~~~~~~~~~~~~~~~~~
